test_case/rust-lang_rust/52959_410382119_16.rs
\n\nTo fix this error, ensure that you don't have any ot{","highlight_start":22,"highlight_end":28}],"label":"immutable borrow occurs here","suggested_replacement":null,"suggestion_applicability":null,"expansion":null},{"file_name":"/checkout/src/test/ui/borrowck/borrowck-slice-pattern-element-loan.rs","byte_start":3852,"byte_end":3854,"line_start":120,"line_end":120,"column_start":26,"column_end":28,"is_primary":false,"text":[{"text":"            nop_subslice(s1);","highlight_start":26,"highlight_end":28}],"label":"borrow used here in later iteration of loop","suggested_replacement":null,"suggestion_applicability":null,"expansion":null}],"children":[],"rendered":"error[E0502]: cannot borrow `s[..]` as mutable because it is also borrowed as immutable\n  --> /checkout/src/test/ui/borrowck/borrowck-slice-pattern-element-loan.rs:119:17\n   |\nLL |     if let [_, _, _, ref s1..] = *s {\n   |                      ------ immutable borrow occurs here\nLL |         if let [ref mut s2.., _, _, _] = *s { //~ERROR\n   |                 ^^^^^^^^^^ mutable borrow occurs here\nLL |             nop_subslice(s1);\n   |                          -- borrow used here in later iteration of loop\n\n"}
[00:43:19] {"message":"aborting due to 11 previous errors","code":null,"level":"error","spans":[],"children":[],"rendered":"error: aborting due to 11 previous errors\n\n"}
[00:43:19] {"message":"For more information about this error, try `rustc --explain E0502`.","code":null,"level":"","spans":[],"children":[],"rendered":"For more information about this error, try `rustc --explain E0502`.\n"}
[00:43:19] ------------------------------------------
[00:43:19] 
[00:43:19] 
[00:43:19] thread '[ui] ui/bormut i;\n// error: cannot borrow `i` as mutable more than once at a time\n